<package format="3">
  <name>wheeltec_gazebo</name>
  <version>2.0.0</version>
  <description>
    Gazebo package for wheeltec_gripper
  </description>
  <license>MIT</license>

  <author>Brent Christensen</author>
  <maintainer email="brent@christensencap.com">Brent Christensen</maintainer>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
     <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>

