 <package format="3">
  <name>wheeltec_gripper_sketch</name>
  <version>2.0.0</version>
  <description>
    wheeltec gripper arduino sketch
  </description>
  <license>MIT</license>

  <author>Brent Christensen</author>
  <maintainer email="brent@christensencap.com">Brent Christensen</maintainer>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

