<package format="3">
  <name>wheeltec_hardware_interface</name>
  <version>0.0.2</version>
  <description>wheeltec_hardware_interface</description>

  <maintainer email="brent@christensencap.com">brent Christensen</maintainer>

  <license>TODO</license>

 <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>